[tool.poetry]
name = "diffusion-demo-code"
version = "0.1.0"
description = ""
authors = ["Dimitar Gueorguiev <dimitar_pg13@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = ">=2.15,<2.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
